# Capstone-data

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml  event_suspension_rules.yaml  leagues.yaml
reports/verification/: five_min_aggregate_report.md  five_min_events.csv  five_min_report.md  five_min_team_event_counts.csv
scripts/: five_minute_aggregate.py  five_minute_snapshot.py
src/soccer_capstone/: __init__.py  models.py  sportradar_client.py
tests/: test_five_minute_aggregate.py  test_five_minute_snapshot.py  test_sportradar_client.py
tests/fixtures/: sample_summary.json
