[project]
name = "soccer-betting-capstone"
version = "0.1.0"
description = "Data layer for soccer betting capstone"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2,<3.0",
  "pyarrow>=15,<16",
  "pydantic>=2.6,<3.0",
  "requests>=2.31,<3.0",
  "ratelimit>=2.2,<3.0",
  "PyYAML>=6.0,<7.0",
  "Jinja2>=3.1,<4.0",
  "python-dotenv>=1.0,<2.0",
  "rich>=13,<14"
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
